--- a/css/beranda.css
+++ b/css/beranda.css
@@ -13,6 +13,7 @@
     --text-color: #000000;
     --main-color: #0165AF;
     --sub-main-color: #FFF500;
+    --sub-main-color2: #F2F2F2;
     --big-font: 6.6rem;
     --p-font: 1rem;
 }
@@ -28,7 +29,6 @@ header {
     width: 100%;
     background-color: var(--bg-color);
     transition: all .50s ease;
-    height: 120px;
     z-index: 1000;
 }
 
@@ -77,12 +77,12 @@ header {
     align-items: center;
     justify-content: space-between;
     height: 80px;
-    background-color: var(--bg-color);
+    background-color: var(--main-color);
 }
 
 /* logo */
 .logo img {
-    width: 150px;
+    width: 110px;
     height: auto;
     margin-left: 20px;
     transition: all .6s ease;
@@ -105,16 +105,16 @@ header {
 
 .main-nav-buttons li a {
     display: inline-block;
-    color: var(--text-color);
+    color: white;
     transition: all .6s ease;
-    font-weight: bold;
+    font-weight: lighter;
     font-size: large;
 }
 
 .main-nav-buttons li a:hover {
     transition: all .6s ease;
     transform: translateY(-5px);
-    color: var(--main-color)
+    color: var(--sub-main-color)
 }
 
 /* right content */
@@ -127,18 +127,17 @@ header {
 /* sign button */
 .sign-button {
     padding: 9px 16px;
-    border: 2px solid var(--main-color);
-    color: var(--main-color);
+    border: 2px solid var(--sub-main-color);
     border-radius: 7px;
     font-size: 14px;
     font-weight: bold;
-    color: #000000;
+    color: white;
     transition: all .6s ease;
 }
 
 .sign-button:hover {
-    background-color: var(--main-color);
-    color: var(--bg-color);
+    background-color: var(--sub-main-color);
+    color: black;
     transition: all .6s ease;
 }
 
@@ -198,8 +197,8 @@ header {
 /* HERO SECTION */
 .hero-section {
     width: 100%;
-    height: 693px;
-    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.3), rgb(0, 0, 0, 0.9)) , url(../assets/pexels-anna-shvets-5324939.jpg);
+    height: 735px;
+    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.2), rgb(0, 0, 0, 0.6)) , url(../assets/pexels-anna-shvets-5324939.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -375,6 +374,252 @@ header {
     text-align: justify;
 }
 
+
+/* VISI MISI */
+.visimisi-section {
+    background-color: var(--sub-main-color);
+    height: 400px;
+}
+
+.visimisi-logo {
+    width: 150px;
+    margin: 20px 0 0 20px;
+}
+
+.visimisi-middle {
+    display: flex;
+}
+
+.visimisi-middle h1 {
+    text-align: center;
+    font-size: xxx-large;
+}
+
+.visimisi-middle p {
+    font-size: 20px;
+    text-align: justify;
+    margin: 10px 20px 0px 30px;
+}
+
+.visimisi-middle ul li {
+    font-size: 20px;
+    text-align: justify;
+    text-decoration:dotted;
+    margin: 10px 30px 0 20px;
+}
+
+/* PILIHAN PROGRAM */
+.card-top {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    align-items: center;
+    margin: 20px 0 0 20px;
+}
+
+.card-title {
+    margin-right: 170px;
+    text-align: center;
+    font-size: xx-large;
+    color: var(--main-color);
+}
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.card-container img {
+    width: 100%;
+    height: 400px;
+    border-radius: 3px;
+}
+
+.card {
+    width: 325px;
+    background-color: var(--main-color);
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+    margin: 20px;
+    padding: 5px;
+}
+
+.card-logo {
+    width: 150px;
+}
+
+.card:hover {
+    transform: translateY(-10px);
+    cursor: pointer;
+    background-color: var(--sub-main-color);
+}
+
+.card:hover p{
+    color: black;
+}
+
+.card:hover h3{
+    color: var(--main-color);
+}
+
+.card-content h3 {
+    text-align: center;
+    color: var(--sub-main-color);
+    margin-top: 10px;
+}
+
+.card-content p {
+    margin: 10px;
+    color: white;
+    text-align: justify;
+}
+
+.contact {
+    position: relative;
+    min-height: 100vh;
+    padding: 50px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--sub-main-color2);
+}
+
+.content {
+    max-width: 800px;
+    text-align: center;
+}
+
+.content h2 {
+    font-size: 36px;
+    font-weight: 500;
+    color: var(--text-color);
+
+}
+
+.content p {
+    margin-top: 10px;
+    font-weight: 300;
+    color: var(--text-color);
+
+}
+
+.contact-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.contact-info {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-info .box {
+    position: relative;
+    padding: 20px 0;
+    display: flex;
+}
+
+.contact-info .box .icon {
+    min-width: 60px;
+    height: 60px;
+    display: flex;
+    background: white;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 22px;
+}
+
+.contact-info .box .text {
+    display: flex;
+    margin-left: 20px;
+    font-size: 16px;
+    color: var(--text-color);
+    flex-direction: column;
+    font-weight: 300;
+}
+
+.contact-info .box .text h3 {
+    font-weight: 500;
+    color: var(--main-color);
+}
+
+.contact-form {
+    width: 40%;
+    padding: 40px;
+    background: white;
+}
+
+.contact-form h2 {
+    font-size: 30px;
+    color: #333;
+    font-weight: 500;
+}
+
+.contact-form .input-box {
+    position: relative;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.contact-form .input-box input,
+.contact-form .input-box textarea {
+    width: 100%;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px 0;
+    border: none;
+    border-bottom: 2px solid #333;
+    outline: none;
+    resize: none;
+}
+
+.contact-form .input-box span {
+    position: absolute;
+    left: 0;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px 0;
+    pointer-events: none;
+    transition: 0.5%;
+    color: #666;
+}
+
+.contact-form .input-box input:focus ~ span,
+.contact-form .input-box input:valid ~ span,
+.contact-form .input-box textarea:focus ~ span,
+.contact-form .input-box textarea:valid ~ span {
+    color: #e91e63;
+    font-size: 12px;
+    transform: translateY(-20px);
+}
+
+.contact-form .input-box input[type="submit"] 
+{
+    width: 100%;
+    background: var(--main-color);
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 18px;
+    border-radius: 5px;
+}
+
+.contact-form .input-box input[type="submit"]:hover
+{
+    background: var(--sub-main-color);
+    color: black;
+}
+
+
+
 @media (max-width: 1280px) {
     .hero-section{
         height: 680px;
@@ -536,6 +781,8 @@ header {
         padding: 5px 25px;
     }   
 }
+
+
 
 /* ******************************************************** */
 
